updated to work with Rider

--- a/Sources/ReCommendedExtension.Tests/ReCommendedExtension.Tests.csproj
+++ b/Sources/ReCommendedExtension.Tests/ReCommendedExtension.Tests.csproj
@@ -18,10 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2019.2.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="JetBrains.Rider.SDK.Tests" Version="2019.2.2" />
     <PackageReference Include="NUnit" Version="3.10.1" />
   </ItemGroup>
 
