--- a/Sources/ReCommendedExtension/ReCommendedExtension.csproj
+++ b/Sources/ReCommendedExtension/ReCommendedExtension.csproj
@@ -22,10 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2019.2.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="JetBrains.Rider.SDK" Version="2019.2.2" />
   </ItemGroup>
 
   <ItemGroup>
